--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <div id="categoryContainer">
             <div id="category1">
                 <h1 id="categoryTitle">Trips into the nature</h1>
-                <img id="categoryImg" src="/assets/forestpic.jpg" alt="">
+                <img id="categoryImg" src="./assets/forestpic.jpg" alt="">
             </div>
             <div id="category2">
                 <h1 id="categoryTitle">Wild beings</h1>
-                <img id="categoryImg" src="/assets/bugpic.jpg" alt="">
+                <img id="categoryImg" src="./assets/bugpic.jpg" alt="">
             </div>
             <div id="category3">
                 <h1 id="categoryTitle">Portraits in nature</h1>
-                <img id="categoryImg" src="/assets/wildportraitpic.jpg" alt="">
+                <img id="categoryImg" src="./assets/wildportraitpic.jpg" alt="">
             </div>
             <div id="category4">
                 <h1 id="categoryTitle">Green meets families</h1>
-                <img id="categoryImg" src="/assets/familypic.jpg" alt="">
+                <img id="categoryImg" src="./assets/familypic.jpg" alt="">
             </div>
         </div>
 <!--         
